--- a/dep02/containers/airflow/docker-compose.yml
+++ b/dep02/containers/airflow/docker-compose.yml
@@ -6,7 +6,7 @@ x-environment: &airflow_environment
   - AIRFLOW__CORE__EXECUTOR=LocalExecutor
   - AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS=False
   - AIRFLOW__CORE__LOAD_EXAMPLES=False
-  - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql://airflow:airflow@postgres:5432/airflow
+  - AIRFLOW__CORE__SQL_ALCHEMY_CONN=${METASTORE_CONN}
   - AIRFLOW__CORE__STORE_DAG_CODE=True
   - AIRFLOW__CORE__STORE_SERIALIZED_DAGS=True
   - AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
@@ -32,7 +32,7 @@ services:
     restart: always
     volumes:
       - logs:/opt/airflow/logs
-      - ./dags:/opt/airflow/dags
+      - ../../dags:/opt/airflow/dags
     environment: *airflow_environment
     command: scheduler
 
